fixed downdown overflow, moved mainBodyContainer closer to header

--- a/reactmovieapp/src/App.css
+++ b/reactmovieapp/src/App.css
@@ -16,7 +16,7 @@
     height: 1000px;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 100px;
+    margin-top: 20px;
     background-color: #FFFFFF;
     position: absolute;
     display: flex;
@@ -32,7 +32,7 @@
 
 .App-Header {
     background-color: #333;
-    height: 75px;
+    height: 73px;
     width: 100%;
 	position: sticky;
 	top: 0;
@@ -70,7 +70,7 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
   padding-top: 10px;
-  z-index: 3;
+  z-index: 2;
   position: relative;
 }
 
@@ -81,7 +81,7 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
   padding-top: 10px;
-  z-index: 3;
+  z-index: 2;
   position: relative;
 }
 
@@ -125,7 +125,7 @@ li a:hover {
 	background-color: #f9f9f9;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
+	z-index: 2;
 	overflow: auto;
 }
 
@@ -135,7 +135,7 @@ li a:hover {
 	background-color: #f9f9f9;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
+	z-index: 2;
 }
 
 .movieDropdownContent a {
